# DataRace

./: .gitignore  Cargo.toml  Makefile  README.md  grep  wmake.ps1
api_sys/: Cargo.toml  build.rs
api_sys/src/: lib.rs
dashboard_spec/: Cargo.toml  Readme.md
dashboard_spec/src/: lib.rs  socket.rs
docs/: DashboardProperties.md  MayImplement.md
launcher/: Cargo.toml  build.rs
launcher/src/: main.rs
lib/: Cargo.toml  build.rs  cbindgen.toml
lib/assets/: nav.html  style.css
lib/assets/js_lib/: datarace.dash.js
lib/src/: api_func.rs  api_types.rs  datastore.rs  events.rs  lib.rs  pluginloader.rs  utils.rs
lib/src/plattform/: linux.rs  mod.rs  windows.rs
lib/src/web/: dashboard.rs  mod.rs  pages.rs  socket.rs  utils.rs
main/: Cargo.toml
main/src/: main.rs
plugin_api/: Cargo.toml
plugin_api/src/: api.rs  lib.rs  wrappers.rs
plugin_api_lib/: Cargo.toml  build.rs  cbindgen.toml
plugin_api_lib/.cargo/: config.toml
plugin_api_lib/assets/: index.html  style.css
plugin_api_lib/src/: api_func.rs  api_types.rs  datastore.rs  lib.rs  pluginloader.rs  utils.rs
plugin_api_lib/src/web/: dashboard.rs  mod.rs  pages.rs  socket.rs  utils.rs
plugin_api_lib/src/web/pages/: dashboard.rs  mod.rs
plugin_api_macro/: Cargo.toml
plugin_api_macro/src/: attr.rs  genators.rs  lib.rs
plugin_api_sys/: Cargo.toml  build.rs
plugin_api_sys/src/: lib.rs
plugin_api_wrapper/: Cargo.toml
plugin_api_wrapper/src/: api.rs  lib.rs  wrappers.rs
plugin_api_wrapper/wrapper_macro/: Cargo.toml
plugin_api_wrapper/wrapper_macro/src/: lib.rs
sample_plugin/: Cargo.toml
sample_plugin/src/: lib.rs
socket_spec/: Cargo.toml  Readme.md
socket_spec/src/: dashboard.rs  lib.rs  socket.rs
test_plugin/: Cargo.toml
test_plugin/src/: lib.rs
