[workspace]
members = ["lib","launcher","plugin_api_sys","plugin_api","plugin_api_macro","sample_plugin", "test_plugin", "socket_spec"]
default-members = ["launcher"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Lukas 'DerGeneralFluff' Lichten"]
license = "GPL-3.0"
repository = "https://github.com/LukasLichten/DataRace"

[profile.dev]
opt-level = 2
debug = false
incremental = true
overflow-checks = true

[profile.release]
strip = true
opt-level = "s"
lto = true
incremental = false
codegen-units = 1
