[package]
name = "launch_datarace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Executable that launches DataRace"

[build-dependencies]
built = "0.7"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datarace_plugin_api_sys = { path = "../plugin_api_sys", features = ["main-entry"] }

