[package]
name = "datarace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core DataRace Library, loads plugins, stores data, and serves the webserver"

[lib]
crate-type = ["cdylib"]
bench = false

[build-dependencies]
built = { version= "0.8", features = ["git2", "chrono"] }
cbindgen = "^0.28"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen2 = "0.7.0"
log = "0.4"
env_logger="0.11"
libc = "0.2"
tokio = { version = "1.44", features = ["full"] }
kanal = "0.1.1"
highway = "1.3.0"
ctrlc = "3.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
axum = "0.8.3"
socketioxide = { version = "0.16", features = ["state"] }
atomic-wait = "1.1.0"
futures-lite = "2.6"
maud = { version = "0.27", features = ["axum"] }
datarace_socket_spec = { path = "../socket_spec" }
rand = "0.9"
hex = "0.4"
dirs = "6.0"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
tower = { version = "0.5", default-features = false }
axum-client-ip = "1.1.3"
