[package]
name = "datarace_plugin_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Crate for building plugins for DataRace"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datarace_plugin_api_sys = { path = "../plugin_api_sys" }
datarace_plugin_api_macro = { path = "../plugin_api_macro" }
