[package]
name = "datarace_plugin_api"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]
bench = false

[build-dependencies]
built = "0.7"
cbindgen = "^0.26"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen2 = "0.6.1"
log = "^0.4"
env_logger="0.10"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
kanal = "0.1.0-pre8"
rand = "0.8.5"
rand_hc = "0.3.2"
fnv = "1.0.7"
ctrlc = "3.4"

futures = "0.3"

