[package]
name = "datarace_plugin_api_macro"
version = "0.1.0"
edition = "2021"
authors = ["Lukas 'DerGeneralFluff' Lichten"]
license = "GPL-3.0"
repository = "https://github.com/LukasLichten/DataRace"
description = "Macro crate for generating functions & handles for DataRace plugins"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true


[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
datarace_plugin_api_sys = { path = "../plugin_api_sys", features = ["compile"] }
