[package]
name = "datarace_plugin_api_macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Macro crate for generating functions & handles for DataRace plugins"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true


[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
datarace_plugin_api_sys = { path = "../plugin_api_sys", features = ["compile"] }
