[package]
name = "datarace_plugin_api_sys"
version = "0.1.0"
edition = "2021"
links = "datarace"

[build-dependencies]
built = "0.7"
bindgen = "^0.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
main-entry = []
compile = []

[dependencies]
libc = "0.2"
