[package]
name = "datarace_plugin_api_sys"
links = "datarace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sys crate that binds to libdatarace library"

[build-dependencies]
built = "0.7"
bindgen = "^0.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
main-entry = []
compile = []

[dependencies]
libc = "0.2"
