[package]
name = "test_plugin"
version = "0.1.0"
edition = "2021"
license = "MIT OR GPL-3.0"
description = "Plugin exclusively for integration testing DataRace"

[lib]
crate-type = ["cdylib"]
bench = false

[build-dependencies]
# built = "0.7"

[dependencies]
# You can use this line in your plugin to import the api wrapper
# datarace_plugin_api = { git = "https://github.com/LukasLichten/DataRace.git", branch = "master" }


# This is used here to test the new development in the api
# Does not work when actually developing a plugin
datarace_plugin_api = { path = "../plugin_api" }
